--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0"
+    },
+    "dependencies": {
+        "vite": "^6.2.5"
     }
 }
