--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "ramonrietdijk/livewire-tables": "^5.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
