--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "tailwindcss": "^4.0.0"
     },
     "dependencies": {
+        "alpinejs": "^3.14.9",
         "vite": "^6.2.5"
     }
 }
