--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0"
+        "concurrently": "^9.0.1"
+        
     },
     "dependencies": {
-        "vite": "^6.2.5"
+        "vite": "^6.2.5",
+        "laravel-vite-plugin": "^1.2.0",
+        "tailwindcss": "^4.0.0"
     }
 }
